seaqt/QtWidgets/gen_qgraphicseffect.h

typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsOpacityEffect QGraphicsOpacityEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
struct QGraphicsEffect_VTable {
	void (*destructor)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self);
	QMetaObject* (*metaObject)(struct QGraphicsEffect_VTable* vtbl, const QGraphicsEffect* self);
	void* (*metacast)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, const char* param1);
	int (*metacall)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, int param1, int param2, void** param3);
	QRectF* (*boundingRectFor)(struct QGraphicsEffect_VTable* vtbl, const QGraphicsEffect* self, QRectF* sourceRect);
	void (*draw)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QPainter* painter);
	void (*sourceChanged)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, int flags);
	bool (*event)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QEvent* event);
	bool (*eventFilter)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QObject* watched, QEvent* event);
	void (*timerEvent)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QTimerEvent* event);
	void (*childEvent)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QChildEvent* event);
	void (*customEvent)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QEvent* event);
	void (*connectNotify)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QGraphicsEffect_VTable* vtbl, QGraphicsEffect* self, QMetaMethod* signal);
};
QGraphicsEffect* QGraphicsEffect_new(struct QGraphicsEffect_VTable* vtbl);
QGraphicsEffect* QGraphicsEffect_new2(struct QGraphicsEffect_VTable* vtbl, QObject* parent);
QMetaObject* QGraphicsEffect_metaObject(const QGraphicsEffect* self);
void* QGraphicsEffect_metacast(QGraphicsEffect* self, const char* param1);
int QGraphicsEffect_metacall(QGraphicsEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsEffect_tr(const char* s);
struct miqt_string QGraphicsEffect_trUtf8(const char* s);
QRectF* QGraphicsEffect_boundingRectFor(const QGraphicsEffect* self, QRectF* sourceRect);
QRectF* QGraphicsEffect_boundingRect(const QGraphicsEffect* self);
bool QGraphicsEffect_isEnabled(const QGraphicsEffect* self);
void QGraphicsEffect_setEnabled(QGraphicsEffect* self, bool enable);
void QGraphicsEffect_update(QGraphicsEffect* self);
void QGraphicsEffect_enabledChanged(QGraphicsEffect* self, bool enabled);
void QGraphicsEffect_connect_enabledChanged(QGraphicsEffect* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
struct miqt_string QGraphicsEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsEffect_trUtf83(const char* s, const char* c, int n);
QMetaObject* QGraphicsEffect_virtualbase_metaObject(const void* self);
void* QGraphicsEffect_virtualbase_metacast(void* self, const char* param1);
int QGraphicsEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
QRectF* QGraphicsEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
void QGraphicsEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QGraphicsEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QGraphicsEffect_virtualbase_childEvent(void* self, QChildEvent* event);
void QGraphicsEffect_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsEffect_protectedbase_updateBoundingRect(void* self);
bool QGraphicsEffect_protectedbase_sourceIsPixmap(const void* self);
QRectF* QGraphicsEffect_protectedbase_sourceBoundingRect(const void* self);
void QGraphicsEffect_protectedbase_drawSource(void* self, QPainter* painter);
QPixmap* QGraphicsEffect_protectedbase_sourcePixmap(const void* self);
QRectF* QGraphicsEffect_protectedbase_sourceBoundingRect1(const void* self, int system);
QPixmap* QGraphicsEffect_protectedbase_sourcePixmap1(const void* self, int system);
QPixmap* QGraphicsEffect_protectedbase_sourcePixmap2(const void* self, int system, QPoint* offset);
QPixmap* QGraphicsEffect_protectedbase_sourcePixmap3(const void* self, int system, QPoint* offset, int mode);
QObject* QGraphicsEffect_protectedbase_sender(const void* self);
int QGraphicsEffect_protectedbase_senderSignalIndex(const void* self);
int QGraphicsEffect_protectedbase_receivers(const void* self, const char* signal);
bool QGraphicsEffect_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsEffect_staticMetaObject();
void QGraphicsEffect_delete(QGraphicsEffect* self);
QMetaObject* QGraphicsColorizeEffect_metaObject(const QGraphicsColorizeEffect* self);
void* QGraphicsColorizeEffect_metacast(QGraphicsColorizeEffect* self, const char* param1);
int QGraphicsColorizeEffect_metacall(QGraphicsColorizeEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsColorizeEffect_tr(const char* s);
struct miqt_string QGraphicsColorizeEffect_trUtf8(const char* s);
QColor* QGraphicsColorizeEffect_color(const QGraphicsColorizeEffect* self);
double QGraphicsColorizeEffect_strength(const QGraphicsColorizeEffect* self);
void QGraphicsColorizeEffect_setColor(QGraphicsColorizeEffect* self, QColor* c);
void QGraphicsColorizeEffect_setStrength(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_colorChanged(QGraphicsColorizeEffect* self, QColor* color);
void QGraphicsColorizeEffect_connect_colorChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsColorizeEffect_strengthChanged(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_connect_strengthChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
struct miqt_string QGraphicsColorizeEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsColorizeEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsColorizeEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsColorizeEffect_trUtf83(const char* s, const char* c, int n);
QMetaObject* QGraphicsColorizeEffect_virtualbase_metaObject(const void* self);
void* QGraphicsColorizeEffect_virtualbase_metacast(void* self, const char* param1);
int QGraphicsColorizeEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
void QGraphicsColorizeEffect_virtualbase_draw(void* self, QPainter* painter);
QRectF* QGraphicsColorizeEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
void QGraphicsBlurEffect_connect_blurRadiusChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_connect_blurHintsChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_offsetChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QPointF*), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_blurRadiusChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_colorChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsOpacityEffect_connect_opacityChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsOpacityEffect_connect_opacityMaskChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, QBrush*), void (*release)(intptr_t));